// Copyright 2019 The gRPC Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "google/protobuf/any.proto";

package any;

service AnyService {
  rpc DoAny (google.protobuf.Any) returns (AnyMessageResponse);
}

message AnyProductRequest {
  string name = 1;
  int32 quantity = 2;
}

message AnyUserRequest {
  string name = 1;
  bool enabled = 2;
}

message AnyMessageResponse {
  string message = 1;
}